# certum

./: .gitignore  EXPERIMENT_LOG.md  pyproject.toml
artifacts/runs/20260213_215223/: 20260213_215223.tree.txt
scripts/: analyze_hard.ps1  analyze_hard_failures.py  analyze_hard_gamma.py  analyze_run.py  audit_scored_dump_vs_cache.py  convert_scifact_raw.ps1  convert_scifact_raw.py  download_hover.py  download_scifact.py  embed_move.py  ferverous.ps1  ferverous_cache.ps1  ferverous_cyclic.ps1  ferverous_deranged.ps1  ferverous_hard.ps1  ferverous_offset.ps1  ferverous_permute.ps1  feverous_cache.py  feverous_cache_build.py  feverous_sqlite_resolver.py  feverous_wiki_resolver.py  gate_suite.py  orig_ferverous_hard_mined.ps1  pack_dir.py  plot_energy_vs_rank.py  plot_regions.py  policy_ablation.py  prepare_hover_gate.py  prepare_scifact_gate.py  prepare_scifact_gate_hf.py  prepare_scifact_gate_release.py  pubmed.py  run.ps1  run_feverous_suite.ps1  run_gate_battery.ps1  run_gate_suite.ps1  run_gate_suite.py  run_gate_suite_pubmed.ps1  run_gate_suite_scifact.ps1  run_hotpot.ps1  (+18 more)
scripts/reporting/: analyze_run.py
src/certum/: __init__.py  adversarial.py  audit.py  calibration.py  custom_types.py  dataset.py  energy.py  gate.py  runner.py
src/certum/axes/: bundle.py  engine.py
src/dpgss/: __init__.py  adversarial.py  audit.py  cache.py  calibration.py  custom_types.py  dataset.py  difficulty.py  embedder.py  energy.py  gate.py  oracle.py  plot.py  policy.py  types.py
src/verity_gate/: dataset.py  embedder.py  gate.py  gate_suite.py  policy.py  run_eval.py
(+65 files in other folders)
